--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "tsup": "^7.2.0",
     "tsx": "^3.14.0",
     "typescript": ">=4.7",
+    "vitest": "^0.34.6",
     "zod": "^3.22.4"
   },
   "devDependencies": {
@@ -29,6 +30,7 @@
     "@typescript-eslint/parser": "^6.10.0",
     "eslint": ">=8.0.0",
     "eslint-config-xo": "^0.43.1",
-    "eslint-config-xo-typescript": "^1.0.1"
+    "eslint-config-xo-typescript": "^1.0.1",
+    "vite-tsconfig-paths": "^4.2.1"
   }
 }
