--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@prisma/client": "^5.5.2",
     "@types/node": "^20.9.0",
     "bcryptjs": "^2.4.3",
+    "dayjs": "^1.11.10",
     "dotenv": "^16.3.1",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.1",
