--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "test:ui": "vitest --ui"
   },
   "dependencies": {
+    "@fastify/jwt": "^8.0.0",
     "@prisma/client": "^5.5.2",
     "@types/node": "^20.9.0",
     "bcryptjs": "^2.4.3",
@@ -26,7 +27,7 @@
     "tsup": "^7.2.0",
     "tsx": "^3.14.0",
     "typescript": ">=4.7",
-    "vitest": "^0.34.6",
+    "vitest": "0.33.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
